--- a/puppet/all-nodes-config.yaml
+++ b/puppet/all-nodes-config.yaml
@@ -28,6 +28,8 @@ parameters:
     type: json
   short_service_node_names:
     type: json
+  short_service_bootstrap_node:
+    type: json
   controller_names:
     type: comma_delimited_list
   memcache_node_ips:
@@ -125,6 +127,7 @@ resources:
               - {get_param: service_ips}
               - {get_param: service_node_names}
               - {get_param: short_service_node_names}
+              - {get_param: short_service_bootstrap_node}
               - controller_node_ips:
                   list_join:
                   - ','
