Revert "Switch mistral to use authtoken configuration"
It turns out the puppet-mistral change this depends on broke
introspection, so we need to back it out for now.

This reverts commit ed029e5bf279945e82bff8766af4093856a7ac6a.

Change-Id: I828478267935cdc68aa24de8c9dc2d12fcadb631

--- a/puppet/services/mistral-base.yaml
+++ b/puppet/services/mistral-base.yaml
@@ -70,10 +70,8 @@ outputs:
         mistral::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
         mistral::rabbit_port: {get_param: RabbitClientPort}
         mistral::debug: {get_param: Debug}
-        mistral::keystone::authtoken::project_name: 'service'
-        mistral::keystone::authtoken::password: {get_param: MistralPassword}
-        mistral::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
-        mistral::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+        mistral::keystone_password: {get_param: MistralPassword}
+        mistral::keystone_tenant: 'service'
         mistral::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
         mistral::keystone_ec2_uri: {get_param: [EndpointMap, KeystoneEC2, uri]}
         mistral::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
