--- a/puppet/services/nova-base.yaml
+++ b/puppet/services/nova-base.yaml
@@ -106,6 +106,11 @@ parameters:
     description: >
         Cron to move deleted instances to another table - Log destination
     default: '/var/log/nova/nova-rowsflush.log'
+  NovaCronArchiveDeleteRowsUntilComplete:
+    type: boolean
+    description: >
+        Cron to move deleted instances to another table - Until complete
+    default: false
 
 
 conditions:
@@ -183,6 +188,7 @@ outputs:
           nova::cron::archive_deleted_rows::max_rows: {get_param: NovaCronArchiveDeleteRowsMaxRows}
           nova::cron::archive_deleted_rows::user: {get_param: NovaCronArchiveDeleteRowsUser}
           nova::cron::archive_deleted_rows::destination: {get_param: NovaCronArchiveDeleteRowsDestination}
+          nova::cron::archive_deleted_rows::until_complete: {get_param: NovaCronArchiveDeleteRowsUntilComplete}
         -
           if:
           - compute_upgrade_level_empty
