Use ws instead of http for Zaqar websocket endpoints
This patch updates the endpoint map for Zaqar websockets
so that we use ws (or wss for SSL) instead of the http varients.
This should help resolve protocol issues when trying to make
connections to the websocket API.

Change-Id: Iea88d1e30299cb621424740a39d498defa371ca4

--- a/environments/tls-endpoints-public-dns.yaml
+++ b/environments/tls-endpoints-public-dns.yaml
@@ -65,6 +65,6 @@ parameter_defaults:
     ZaqarAdmin: {protocol: 'http', port: '8888', host: 'IP_ADDRESS'}
     ZaqarInternal: {protocol: 'http', port: '8888', host: 'IP_ADDRESS'}
     ZaqarPublic: {protocol: 'https', port: '13888', host: 'CLOUDNAME'}
-    ZaqarWebSocketAdmin: {protocol: 'http', port: '9000', host: 'IP_ADDRESS'}
-    ZaqarWebSocketInternal: {protocol: 'http', port: '9000', host: 'IP_ADDRESS'}
-    ZaqarWebSocketPublic: {protocol: 'https', port: '9000', host: 'CLOUDNAME'}
+    ZaqarWebSocketAdmin: {protocol: 'ws', port: '9000', host: 'IP_ADDRESS'}
+    ZaqarWebSocketInternal: {protocol: 'ws', port: '9000', host: 'IP_ADDRESS'}
+    ZaqarWebSocketPublic: {protocol: 'wss', port: '9000', host: 'CLOUDNAME'}
