--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -82,9 +82,9 @@ parameters:
       ZaqarAdmin: {protocol: http, port: '8888', host: IP_ADDRESS}
       ZaqarInternal: {protocol: http, port: '8888', host: IP_ADDRESS}
       ZaqarPublic: {protocol: http, port: '8888', host: IP_ADDRESS}
-      ZaqarWebSocketAdmin: {protocol: http, port: '9000', host: IP_ADDRESS}
-      ZaqarWebSocketInternal: {protocol: http, port: '9000', host: IP_ADDRESS}
-      ZaqarWebSocketPublic: {protocol: http, port: '9000', host: IP_ADDRESS}
+      ZaqarWebSocketAdmin: {protocol: ws, port: '9000', host: IP_ADDRESS}
+      ZaqarWebSocketInternal: {protocol: ws, port: '9000', host: IP_ADDRESS}
+      ZaqarWebSocketPublic: {protocol: ws, port: '9000', host: IP_ADDRESS}
     description: Mapping of service endpoint -> protocol. Typically set
       via parameter_defaults in the resource registry.
   CloudEndpoints:
