--- a/puppet/services/octavia-api.yaml
+++ b/puppet/services/octavia-api.yaml
@@ -70,13 +70,15 @@ outputs:
                   - "%{hiera('tripleo::profile::base::database::mysql::client_bind_address')}"
             octavia::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             octavia::keystone::authtoken::project_name: 'service'
+            octavia::keystone::authtoken::password: {get_param: OctaviaPassword}
             octavia::api::sync_db: true
             tripleo.octavia_api.firewall_rules:
               '120 octavia api':
                 dport:
                   - 9876
                   - 13876
-            octavia::host: {get_param: [ServiceNetMap, OctaviaApiNetwork]}
+            octavia::api::host: {get_param: [ServiceNetMap, OctaviaApiNetwork]}
+            neutron::server::service_providers: ['LOADBALANCERV2:Octavia:neutron_lbaas.drivers.octavia.driver.OctaviaDriver:default']
       step_config: |
         include tripleo::profile::base::octavia::api
       service_config_settings:
